--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     blah
     <h1>test</h1>
     <h2>oh</h2>
-    <a href="google.com"  </a>
+    <a href="google.com">google</a>
     
   </body>
  </html>
