--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     blah
-    <h1>test<a href="google.com">google</a></h1>
+    <h1>test<a href="https://google.com">google</a></h1>
     
     <h2>oh</h2>
     
