--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Hack club project</title>
     <p6> free boba</p6>
-    
+    <img src="img_chania.jpg" alt="Flowers in Chania">
   </head>
 
   <body>
