--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h3> set
       1 of 3
       verb
-      ˈset 
+      set 
       set; setting; sets
       Synonyms of set
       transitive verb
