--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <p6> Cool</p6>
     
   </head>
-
+  header {
+    background-color: #666;
+    padding: 30px;
+    text-align: center;
+    font-size: 35px;
+    color: white;
+  }
   <body>
   
     <h1>wow readme <a href="README.md"> click me</a></h1>
