--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Hack club project</title>
     <p6> Cool</p6>
+    <style>
     header {
       background-color: #666;
       padding: 30px;
@@ -12,6 +13,7 @@
       font-size: 35px;
       color: white;
     }
+    </style>
   </head>
   
   <body>
