--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
       font-size: 35px;
       color: white;
     }
+    article {
+  -webkit-flex: 3;
+  -ms-flex: 3;
+  flex: 3;
+  background-color: #f1f1f1;
+  padding: 10px;
+    }
     </style>
   </head>
   
