--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
       font-size: 35px;
       color: white;
     }
-    article {
-  -webkit-flex: 3;
-  -ms-flex: 3;
-  flex: 3;
-  background-color: #f1f1f1;
-  padding: 10px;
-    }
+    footer {
+      background-color: #666;
+      padding: 30px;
+      text-align: center;
+      font-size: 35px;
+      color: white;
     </style>
   </head>
   
