--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       color: white;
     }
     footer {
-      background-color: #928787;
+      background-color: #cccccc;
       padding: 30px;
       text-align: center;
       font-size: 35px;
