--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
       font-size: 35px;
       color: white;
     }
-    footer {
-      background-color: #cccccc;
-      padding: 30px;
-      text-align: center;
-      font-size: 35px;
-      color: white;
+    nav {
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  background: #ccc;
+  padding: 20px;
+  }
     </style>
   </head>
   
