--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
     header {
       background-color: #666;
-      padding: 1, 4;
+      padding: 20px;
       text-align: center;
       color: white;
     }
