--- a/index.html
+++ b/index.html
@@ -71,12 +71,9 @@ footer {
 </head>
 <body>
 
-<h2>CSS Layout Flexbox</h2>
-<p>In this example, we have created a header, two columns/boxes and a footer. On smaller screens, the columns will stack on top of each other.</p>
-<p>Resize the browser window to see the responsive effect.</p>
 
 <header>
-  <h2>Cities</h2>
+  <h2>Website</h2>
 </header>
 
 <section>
@@ -94,10 +91,6 @@ footer {
     <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
   </article>
 </section>
-
-<footer>
-  <p>Footer</p>
-</footer>
 
 </body>
 </html>
