--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@ nav ul {
   padding: 0;
 }
 
-/* Style the content */
+
 article {
   -webkit-flex: 3;
   -ms-flex: 3;
   flex: 3;
-  background-color: #f1f1f1;
+  background-color: #ff0000;
   padding: 10px;
 }
 
