--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ article {
   -webkit-flex: 3;
   -ms-flex: 3;
   flex: 3;
-  background-color: #ff0000;
+  background-color: #00ff0d;
   padding: 10px;
 }
 
