--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body {
 header {
   background-color: #666;
   padding: 0px;
-  text-align: center;
+  text-align: top;
   font-size: 35px;
   color: white;
 }
