--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ header {
   text-align: center;
   font-size: 35px;
   color: white;
-  margin-top: 0;
+  margin: 0;
 }
 
 /* Container for flexboxes */
