--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/
   <title>Flexbox & Grid</title>
-  <link> rel="stylesheet" href="styles.css">
+  <link> rel = "stylesheet" href = "styles.css">
 </head>
 <body> 
   <div class = "box">1</div>
