--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
   <div class = "box">13</div>
   <div class = "box">14</div>
   <div class = "box">15</div>
+  <div class = "box">16</div>
+  <div class = "box">17</div>
+  <div class = "box">18</div>
 </body>
 </html>
