--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body> 
   <div class = "box"><link> <a href="google.com">google</a></div>
   <div class = "box">2</div>
-  <div class = "box">3</div>
+  <div class = "test">3</div>
   <div class = "box">4</div>
   <div class = "box">5</div>
-  <div class = "box">6</div>
+  <div class = "test">6</div>
   <div class = "box">7</div>
   <div class = "box">8</div>
   <div class = "box">9</div>
