--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel = "stylesheet" href = "styles.css">
 </head>
 <body> 
+<div class = "round">
   <div class = "box"><link> <a href="google.com">google</a></div>
   <div class = "box">2</div>
   <div class = "box2">3</div>
@@ -23,5 +24,6 @@
   <div class = "box">16</div>
   <div class = "box">17</div>
   <div class = "box">18</div>
+</div> 
 </body>
 </html>
