--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel = "stylesheet" href = "styles.css">
+  <title> hi </title>
 </head>
 <body> 
   <div class = "box"><link> <a href="google.com">google</a></div>
@@ -11,17 +12,5 @@
   <div class = "box">4</div>
   <div class = "box">5</div>
   <div class = "box2">6</div>
-  <div class = "box">7</div>
-  <div class = "box">8</div>
-  <div class = "box">9</div>
-  <div class = "box">10</div>
-  <div class = "box">11</div>
-  <div class = "box">12</div>
-  <div class = "box">13</div>
-  <div class = "box">14</div>
-  <div class = "box">15</div>
-  <div class = "box">16</div>
-  <div class = "box">17</div>
-  <div class = "box">18</div>
 </body>
 </html>
