--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <link rel = "stylesheet" href = "styles.css">
 </head>
-<body> 
+<div class="flex-container"> 
   <div class = "box"><link> <a href="google.com">google</a></div>
   <div class = "box1">2</div>
   <div class = "box2">3</div>
   <div class = "box3">4</div>
   <div class = "box4">5</div>
   <div class = "box5">6</div>
-</body>
+</div>
 </html>
