--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <link rel = "stylesheet" href = "styles.css">
 </head>
+<body>
 <div class="flex-container"> 
   <div class = "box"><link> <a href="google.com">google</a></div>
   <div class = "box1">2</div>
@@ -12,4 +13,5 @@
   <div class = "box4">5</div>
   <div class = "box5">6</div>
 </div>
+</body>
 </html>
