--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel = "stylesheet" href = "styles.css">
 </head>
-<>
+<body>
   <div class = "box"><link> <a href="google.com">google</a></div>
   <div class = "box1">2</div>
   <div class = "box2">3</div>
