--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <link rel = "stylesheet" href = "styles.css">
+  <div class="dot red"></div>
+  <div class="dot yellow"></div>
+  <div class="dot green"></div>
 </head>
 <body>
-  <div class = "box"><link> <a href="google.com">google</a></div>
-  <div class = "box1">2</div>
-  <div class = "box2">3</div>
-  <div class = "box3">4</div>
-  <div class = "box4">5</div>
-  <div class = "box5">6</div>
+  
+  <div class = "flex-container">
+    <div class = "box"><link> <a href="google.com">google</a></div>
+    <div class = "box1">2</div>
+    <div class = "box2">3</div>
+    <div class = "box3">4</div>
+    <div class = "box4">5</div>
+    <div class = "box5">6</div>
+  </div>
 </body>
 </html>
