--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <div class="dot red"></div>
   <div class="dot yellow"></div>
   <div class="dot green"></div>
-  <h1>hover everthing</h1>
+  <h1>hover everything</h1>
+  
 </head>
 <body>
   
