--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
   
   <div class = "flex-container">
     <div class = "box"><link> <a href="google.com">google</a></div>
-    <div class = "box1">2</div>
-    <div class = "box2">3</div>
-    <div class = "box3">4</div>
-    <div class = "box4">5</div>
-    <div class = "box5">6</div>
+    <div class = "box1"></div>
+    <div class="flip-card">
+      <div class = "box2">3
+        <div class = "box6">7</div>
+      </div>
+    </div>
+    <div class = "box3"></div>
+    <div class = "box4"></div>
+    <div class = "box5"></div>
+    
   </div>
 </body>
 </html>
