--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class = "box"><link> <a href="google.com">google</a></div>
     <div class = "box1"></div>
     <div class="flip-card">
-      <div class = "box2">3
-        <div class = "box6">7</div>
+      <div class = "box2">:)
+        <div class = "box6">hi</div>
       </div>
     </div>
     <div class = "box3"></div>
