--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class = "box1"></div>
     <div class="flip-card">
       <div class = "box2">:)
-        <div class = "box6">hi</div>
+        <div class = "box6">wow</div>
       </div>
     </div>
     <div class = "box3"></div>
